# sleep-time

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  tauri.conf.json
.github/workflows/: sleep-time-release.yml
resources/: app.manifest  app.rc
resources/assets/: about.html  index.html  index.js  menubar.html  tray.html
resources/assets/css/: index.css  menu.css
resources/assets/script/: main.tis
resources/assets/ui/: app.css  app.js  app.js.map
src/: assets.rs  conf.rs  main.rs  tray.rs
src/handler/: event_handler.rs  host_handler.rs  mod.rs
src/service/: mod.rs  service.rs  timer.rs
ui/: index.html  package-lock.json  package.json
ui-src/: package.json  rollup.config.js
ui-src/src/: App.svelte  Tray.svelte  main.js
ui-src/src/widgets/: NumberInput.svelte
ui/src/: App.jsx  App.module.css  Dialog.jsx  TimeSection.jsx  index.css  index.jsx
