[package]
name = "sleep-time"
version = "0.1.1"
authors = ["KK <kk-pub@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.53"
rust-embed = "5.6.0"
anyhow = "1.0.32"
chrono = "0.4.15"
dirs = "3.0.1"

[target.'cfg(windows)'.dependencies]
powershell_script = "0.1.5"
winapi = { version = "0.3", features = ["errhandlingapi", "powrprof", "processthreadsapi", "reason", "securitybaseapi", "winbase", "winerror", "winnt", "winuser"]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.3.3"
cc = "1.0"

[profile.release]
panic = "abort"
lto = true