[package]
name = "sleep-time"
version = "0.1.3"
authors = ["KK <kk-pub@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.56"
rust-embed = "5.9.0"
anyhow = "1.0.40"
chrono = "0.4.19"
dirs = "3.0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "powrprof", "processthreadsapi", "reason", "securitybaseapi", "winbase", "winerror", "winnt", "winuser","objidl","shobjidl_core","objbase"]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6.2"
cc = "1.0"

[profile.release]
panic = "abort"
lto = true