[package]
name = "sleep-time"
version = "0.2.3"
description = "定时休眠系统"
authors = ["Kaay <kk-pub@outlook.com>"]
license = "MIT"
repository = "https://github.com/kkua/sleep-time"
default-run = "sleep-time"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["dialog-all", "system-tray", "window-all"] }
anyhow = "1.0"
dirs = "4.0.0"
chrono = "0.4.23"
once_cell = "1.17.0"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "powrprof", "processthreadsapi", "reason", "securitybaseapi", "winbase", "winerror", "winnt", "winuser","objidl","shobjidl_core","objbase"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]



[profile.release]
lto = true
panic = "abort"
overflow-checks = false
strip = "debuginfo"
